--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,11 @@
       <version>4.3.1</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>org.acegisecurity</groupId>
+          <artifactId>acegi-security</artifactId>
+          <version>1.0.5</version>
+      </dependency>
   </dependencies>
   
   <properties>
